Fixed small issue with the date alignment

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -90,6 +90,6 @@ ul {
 
 .birthday {
     text-decoration: underline;
-    margin-left: auto;
+    float: right;
 }
 
